--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-bootstrap": "^2.10.1",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
+    "react-icons-kit": "^2.0.0",
     "react-router-dom": "^6.22.1",
     "react-scripts": "5.0.1",
     "recharts": "^2.12.1",
