--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "framer-motion": "^11.0.5",
     "hero-slider": "^3.2.1",
     "material-icons": "^1.13.12",
+    "nanoid": "^5.0.6",
     "react": "^18.2.0",
     "react-awesome-slider": "^4.1.0",
     "react-bootstrap": "^2.10.1",
