--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "hero-slider": "^3.2.1",
     "material-icons": "^1.13.12",
     "nanoid": "^5.0.6",
+    "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
     "react-awesome-slider": "^4.1.0",
     "react-bootstrap": "^2.10.1",
@@ -25,6 +26,8 @@
     "react-router-dom": "^6.22.1",
     "react-scripts": "5.0.1",
     "recharts": "^2.12.1",
+    "sass": "^1.71.1",
+    "three": "^0.162.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
