--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "nanoid": "^5.0.6",
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
+    "react-animated-cursor": "^2.11.2",
     "react-awesome-slider": "^4.1.0",
     "react-bootstrap": "^2.10.1",
     "react-dom": "^18.2.0",
